# crestview-ai-concierge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  leads.py  stats.py
backend/app/core/: config.py  guards.py
backend/app/data/: chunks.json  embeddings.npz  model.json
backend/app/services/: calculator.py  llm.py  llm_providers.py  rag.py  scoring.py  sessions.py  webhook.py
backend/tests/: test_calculator.py  test_guards.py  test_leads.py  test_llm.py  test_rag.py  test_rate_limit.py  test_scoring.py
content/docs/: amenities.md  booking-process.md  faq.md  listings.md  maintenance-policy.md  payment-plan.md  pet-policy.md  possession-schedule.md
docs/: design-plan.md  ollama-dev.md
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/landing/: Footer.tsx  HeroIllustration.tsx  ListingCard.tsx
frontend/components/widget/: BreakItPanel.tsx  ConciergeWidget.tsx  LeadSteps.tsx  MarkdownMessage.tsx  MessageBubble.tsx  MessageStream.tsx  SourceChip.tsx  StatsPanel.tsx  SuggestionChips.tsx  WidgetLoader.tsx  WidgetPanel.tsx  types.ts
frontend/lib/: api.ts  content.ts  sse.ts
scripts/: embed.py
