[project]
name = "crestview-backend"
version = "0.1.0"
description = "Crestview Residences AI concierge backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "anthropic==0.116.0",
    "httpx==0.28.1",
    "slowapi==0.1.10",
    "numpy==2.5.1",
    "python-dotenv==1.2.2",
    "sse-starlette==3.4.5",
    "fastembed==0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
    "mypy==2.2.0",
    "pip-audit==2.10.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
